2014/4/30 commit basic function: comment submit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
 		<p>&copy; 2014 FlashskyCo.</p>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<!-- <li><a href="index.html">Home</a></li> -->
+				<%= link_to 'Home', blog_path %>
 			</ul>
 		</nav>
 	</footer>
