--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -21,6 +21,7 @@
 <section class="comment">
     <p><%= @comment.description %></p>
     <footer>
-        <p><%= @comment.user %> April 26 2014 08:12 AM</p>
+        <p><%= @comment.user %> <%= @comment.created_at.localtime.strftime("%A %B %d %X %Z %Y")  %></p>
+       <!--  # April 26 2014 08:12 AM -->
     </footer>
 </section>
