--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -6,7 +6,7 @@
 body{
 	width: 900px;
 	margin: 15px auto;
-	font-family: "Times New Roman", Arial, "MS Trebuchet";
+    font-family:  arial, "tmes new roman",serif;
 }
 
 header#page_header{
