--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -8,7 +8,7 @@
 				<%= truncate(strip_tags(article.content), length: 500) %>
 				<footer>
 					<!-- <a href="article_view.html"><i>2 Comments</i></a> -->
-					<%= link_to "Comments", blog_show_path(article_id: article) %>
+					<%= link_to article.comments.count.to_s+" Comments ", blog_show_path(article_id: article) %>
 				</footer>
 			</article>		
 <% end %>
