--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@comment) do |f| %>
-  <% if @comment.errors.any? %>
+<%= form_for(comment, remote: true) do |f| %>
+  <% if comment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
       <ul>
-      <% @comment.errors.full_messages.each do |msg| %>
+      <% comment.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -27,22 +27,22 @@
     <%= f.submit %>
   </div> -->
 
-  <section id="postcomments">
-          <h3>POST A COMMENT</h3>
+
+
             <form action="" method="POST" accept-charset=utf-8>
               <label for="name">Name:</label><br/>
              <!--  <input type="text" id="name" class="text" placeholder="'Luo'" /><br/> -->
-               <%= f.text_field :user %><br/>
+               <%= f.text_field :user, placeholder: 'Luo' %><br/>
 
               <label for="email">Email:</label><br/>
              <!--  <input type="text" id="email" class="text" placeholder="user@example.com" /><br/> -->
-              <%= f.text_field :mail %><br/>
+              <%= f.text_field :mail, placeholder: "user@example.com" %><br/>
 
               <label for="comment_text">Comment:</label><br/>
 <!--               <textarea rows="10" cols="30" id="comment_text"></textarea><br/>
  -->           
               <%= f.text_area :description %><br/>
-              <input type="submit" value="Submit" class="submit"/>
+             <input type="submit" value="Submit" class="submit"/> 
+            <!--    <%= submit_tag "Submit" %>  -->
             </form>
-</section>
 <% end %>
