--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -13,6 +13,9 @@ p,li{
 
 header#page_header{
 	width: 100%;
+	background-color: #A3B8CD;
+	color: #FFFFFF;
+	font-weight: normal;
 }
 
 section#posts{
